// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applyTheme renders correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="align-items: flex-start; background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); flex-direction: row; flex-wrap: wrap; margin-left: -8px; margin-top: -8px; padding: 16px 16px 16px 16px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
</div>
`;

exports[`defaultProps should render correctly for color 1`] = `
<div
  class="css-view-1dbjc4n"
  style="align-items: flex-start; color: rgb(87, 79, 235); flex-direction: row; flex-wrap: wrap; margin-left: -8px; margin-top: -8px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    hello world
  </div>
</div>
`;

exports[`modes renders correctly for applyTheme 1`] = `
<div
  class="css-view-1dbjc4n"
  style="align-items: flex-start; background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(238, 237, 253); flex-direction: row; flex-wrap: wrap; margin-left: -8px; margin-top: -8px; padding: 16px 16px 16px 16px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
</div>
`;

exports[`modes renders correctly for overrides 1`] = `
<div
  class="css-view-1dbjc4n"
  style="align-items: flex-start; background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); flex-direction: row; flex-wrap: wrap; margin-left: -8px; margin-top: -8px; padding: 16px 16px 16px 16px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
</div>
`;

exports[`modes should render correctly when colorMode is set globally 1`] = `
<div
  class="css-view-1dbjc4n"
  style="align-items: flex-start; background-color: rgb(255, 0, 0); color: rgb(238, 237, 253); flex-direction: row; flex-wrap: wrap; margin-left: -8px; margin-top: -8px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
</div>
`;

exports[`modes should render correctly when colorMode set as prop 1`] = `
<div
  class="css-view-1dbjc4n"
  style="align-items: flex-start; background-color: rgb(255, 0, 0); color: rgb(238, 237, 253); flex-direction: row; flex-wrap: wrap; margin-left: -8px; margin-top: -8px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
</div>
`;

exports[`overrides should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="align-items: flex-start; background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); flex-direction: row; flex-wrap: wrap; margin-left: -8px; margin-top: -8px; padding: 16px 16px 16px 16px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="align-items: flex-start; flex-direction: row; flex-wrap: wrap; margin-left: -8px; margin-top: -8px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
<div
  class="css-view-1dbjc4n"
  style="align-items: flex-start; color: rgb(87, 79, 235); flex-direction: row; flex-wrap: wrap; margin-left: -8px; margin-top: -8px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly with isFilled 1`] = `
<div
  class="css-view-1dbjc4n"
  style="align-items: stretch; flex-direction: row; flex-wrap: wrap; margin-left: -8px; margin-top: -8px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly with spacing 1`] = `
<div
  class="css-view-1dbjc4n"
  style="align-items: flex-start; flex-direction: row; flex-wrap: wrap; margin-left: -32px; margin-top: -32px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 32px; margin-top: 32px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 32px; margin-top: 32px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 32px; margin-top: 32px;"
  >
    Hello world
  </div>
</div>
`;

exports[`theming Set.styles.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="align-items: flex-start; background-color: rgb(255, 0, 0); flex-direction: row; flex-wrap: wrap; margin-left: -8px; margin-top: -8px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    hello world
  </div>
</div>
`;

exports[`theming Set.styles.base should render correctly 2`] = `
<div
  class="css-view-1dbjc4n"
  style="align-items: flex-start; flex-direction: row; flex-wrap: wrap; margin-left: -8px; margin-top: -8px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
</div>
`;

exports[`variants renders correctly for applyTheme 1`] = `
<div
  class="css-view-1dbjc4n"
  style="align-items: flex-start; box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(255, 0, 0); flex-direction: row; flex-wrap: wrap; margin-left: -8px; margin-top: -8px; padding: 16px 16px 16px 16px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
</div>
`;

exports[`variants renders correctly for overrides 1`] = `
<div
  class="css-view-1dbjc4n"
  style="align-items: flex-start; background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); flex-direction: row; flex-wrap: wrap; margin-left: -8px; margin-top: -8px; padding: 16px 16px 16px 16px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
</div>
`;

exports[`variants styles.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="align-items: flex-start; background-color: rgb(255, 0, 0); flex-direction: row; flex-wrap: wrap; margin-left: -8px; margin-top: -8px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-size: 16px; margin-left: 8px; margin-top: 8px;"
  >
    Hello world
  </div>
</div>
`;
